<?xml version="1.0"?>
<package format="2">
  <name>sakura_common</name>
  <version>1.0.0</version>
  <description>The common pkg for sakura</description>
  <maintainer email="keroroxzz@gmail.com">rtu</maintainer>
  <license>nope</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
